--- a/config.ini
+++ b/config.ini
@@ -1,11 +1,11 @@
 [base]
-type=server
+type=client
 [server]
 client_port=22000
 control_port=23000
 h264_port=23001
 window_flag=0
-window_size=2
+window_size=4
 [client]
 ip=192.169.27.164
 port=23000
