--- a/bin/config.ini
+++ b/bin/config.ini
@@ -1,11 +1,11 @@
 [base]
-type=client
+type=server
 [server]
 client_port=22000
 control_port=23000
 h264_port=23001
 window_flag=0
-window_size=0
+window_size=1
 [client]
 ip=192.169.27.164
 port=23000
