--- a/bin/config.ini
+++ b/bin/config.ini
@@ -1,11 +1,14 @@
 [base]
-type=server
+type=client
 [server]
 client_port=22000
 control_port=23000
 h264_port=23001
-window_flag=0
-window_size=1
+window_flag=1
+window_size=2
 [client]
-ip=192.169.27.164
-port=23000
+server_ip=192.169.27.150
+server_port=22000
+quality=60
+fps=25
+
