--- a/bin/config.ini
+++ b/bin/config.ini
@@ -1,5 +1,5 @@
 [base]
-type=server
+type=client
 [server]
 client_port=22000
 control_port=23000
@@ -7,7 +7,7 @@ h264_port=23001
 window_flag=1
 window_size=2
 [client]
-server_ip=192.168.43.181
+server_ip=192.169.27.221
 server_port=22000
 quality=60
 fps=25
